hard-gists-me/3c76bc174844948c5f98/log.txt
Traceback (most recent call last):
  File "snippet.py", line 2, in <module>
    from pipeline.packager import Packager
  File "/usr/local/lib/python2.7/site-packages/pipeline/packager.py", line 110
    print(f"Saving: {output_filename}")
                                     ^
SyntaxError: invalid syntax
